--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div class="elemento2">Login</div>
         <div class="elemento3">Contact US</div>
         <div class="elemento4">About</div>
+        <div class="elemento4">About</div>
        
        
     </div>
