Primer Layout con FlexBox

--- a/index.html
+++ b/index.html
@@ -9,19 +9,32 @@
 
 </head>
 <body>  
-    <div class="contenedor">
-        <div class="elemento1">Home Principal</div>
-        <div class="elemento2">Login</div>
-        <div class="elemento3">Contact US</div>
-        <div class="elemento4">About</div>
-        <div class="elemento4">About</div>
-        <div class="elemento4">About</div>
-        <div class="elemento3">Contact US</div>
-        <div class="elemento4">About</div>
-        <div class="elemento4">About</div>
-        <div class="elemento4">About</div>
-       
-       
+
+    <header>
+        <h1>Mi Pagina Web</h1>
+    </header>
+
+    <nav>
+        <a href="#">Home</a>
+        <a href="#">Contact</a>
+        <a href="#">Notice</a>
+        <a href="#">Sobre Mi</a>
+    </nav>
+
+    <div class="row">
+        <aside>
+            <h2>Aside</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, ullam culpa! Ex, nihil exercitationem voluptate ab eaque adipisci ullam aliquam?</p>
+        </aside>
+        <section>
+            <h2>Section</h2>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis delectus, facilis eaque dolor, aperiam quia laboriosam saepe, sit ex laborum dolorem deleniti consequuntur fugiat doloribus dolorum tempora repudiandae ipsum sint.
+        </section>
     </div>
+
+    <footer>
+        <h2>Footer</h2>
+    </footer>
+
 </body>
 </html>
